@@ -1,3 +1,4 @@
+	* back-port fix last_upload and last_download resume data fields to use posix time
 
 1.2.19 released
 
